# manticore

./: .gitignore  README.md
examples/: logic.mlir  logic.v  logic_opt.mlir  logic_out.v
original-designs/: 21377_UHDM-integration-tests_tests_OneConcat_dut.v
result-vectorized-designs/: 10003_ModelSim-IntelFPGA_Demultiplexers_1to8DeMux_dataflow_modelling.v  10132_N-GO_cores_AmstradCPC_common_az80_alu_bit_select.v  10957_OpenABC_leaf_level_verilog_asap7_ibex_prim_secded_39_32_dec.v  10958_OpenABC_leaf_level_verilog_asap7_ibex_prim_secded_72_64_dec.v  10959_OpenABC_leaf_level_verilog_asap7_ibex_prim_secded_72_64_enc.v  11008_OpenABC_leaf_level_verilog_gf12_ariane133_lzc_00000003.v  11009_OpenABC_leaf_level_verilog_gf12_ariane133_lzc_00000004.v  11013_OpenABC_leaf_level_verilog_gf12_ariane133_pipe_reg_simple_Depth0.v  11020_OpenABC_leaf_level_verilog_gf12_ariane133_stream_demux_N_OUP3.v  11021_OpenABC_leaf_level_verilog_gf12_ariane133_stream_mux_N_INP3.v  11049_OpenABC_leaf_level_verilog_gf12_ariane_lzc_00000003.v  11050_OpenABC_leaf_level_verilog_gf12_ariane_lzc_00000004.v  11054_OpenABC_leaf_level_verilog_gf12_ariane_pipe_reg_simple_Depth0.v  11061_OpenABC_leaf_level_verilog_gf12_ariane_stream_demux_N_OUP3.v  11062_OpenABC_leaf_level_verilog_gf12_ariane_stream_mux_N_INP3.v  11083_OpenABC_leaf_level_verilog_gf12_bp_quad_bp_me_cord_to_id_05.v  11084_OpenABC_leaf_level_verilog_gf12_bp_quad_bp_me_lce_id_to_cord_05.v  11088_OpenABC_leaf_level_verilog_gf12_bp_quad_bsg_array_concentrate_static_09_128.v  (+1138 more)
src/passes/moorePrettyPrinter/: CMakeLists.txt  MoorePrettyPrinter.cpp
(+3554 files in other folders)
